lang/interpret_test/TestAstFunc2/unify-interpolate-edge2-fail.txtar
-- main.mcl --
$name = ["a", "bb", "ccc",]
test $name {}
test "test" {}

#Test["test"] -> Test[$name]    # must pass
Test["test"] -> Test["${name}"] # must fail

-- OUTPUT --
# err: errUnify: type unification error here: in /main.mcl @6:17-6:31
--
Test["test"] -> Test["${name}"] # must fail
                ^^^^^^^^^^^^^^^

ERROR: type error: str != list
